--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,10 @@
 {% block content %}
 <div class="card">
     <div class="info-box">
-        <strong>Welcome!</strong> Enter your CET number to check your predicted rank and admission eligibility. This data is based on official university results.
+        <strong>Welcome!</strong> Enter your CET number to check your predicted rank and admission eligibility. This data is based on official university results.<br>
+        <a href="https://www.instagram.com/mithun.gowda.b" target="_blank" style="color: #25D366; text-decoration: none;">
+            – Mithun Gowda B
+        </a>
     </div>
 
     {% if error %}
