--- a/templates/manual_entry.html
+++ b/templates/manual_entry.html
@@ -3,7 +3,9 @@
 {% block content %}
 <div class="card">
     <div class="info-box">
-        <strong>Manual Estimation:</strong> Enter your CET marks to get an estimated rank range based on available candidate data.
+        <strong>Manual Estimation:</strong> Enter your CET marks to get an estimated rank range based on available candidate data.<br>This tool is Designed by:<a href="https://www.instagram.com/mithun.gowda.b" target="_blank" style="color: #25D366; text-decoration: none;">
+             Mithun Gowda B
+        </a>
     </div>
 
     {% if error %}
