--- a/templates/base.html
+++ b/templates/base.html
@@ -535,6 +535,16 @@
     </div>
 
     <footer class="footer">
+        <script type="text/javascript">
+	atOptions = {
+		'key' : 'd216b0affa4945921a507d97d145ab2f',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/d216b0affa4945921a507d97d145ab2f/invoke.js"></script>
         <div class="social-links">
             <a href="https://github.com/mithun50" target="_blank" title="GitHub">
                 <i class="fab fa-github"></i>
