--- a/templates/base.html
+++ b/templates/base.html
@@ -520,6 +520,8 @@
 
         {% block additional_styles %}{% endblock %}
     </style>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8944927616490253"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
