--- a/templates/base.html
+++ b/templates/base.html
@@ -524,6 +524,12 @@
      crossorigin="anonymous"></script>
 </head>
 <body>
+	<script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: 'ky4zboipq0',
+    });
+	</script>
+	
     <header class="header">
         <div class="decoration"></div>
         <div class="header-content">
